# multi-restic

./: .env  README.md  central.toml  pyproject.toml
src/multi_restic/: __init__.py  config.py  generate_script.py  schedule.py  types.py  util.py
