[project]
name = "multi-restic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kinsteen", email = "me@kinsteen.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "dotenv>=0.9.9",
    "paramiko>=4.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
multi-restic = "multi_restic:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
